# vision-agent

./: .cursorrules  .env.template  .gitignore  CLAUDE.md  Plan.md  README.md  SIMPLIFICATION_CONCEPT.md  askui_chat.db  debug_db.py  mkdocs.yml  mypy.ini  playground.py  prompt.md  pyproject.toml  refactor_plan.md  test.py
.cursor/: environment.json
.cursor/rules/: release_create.md  release_notes_create copy.md  release_notes_create.md  release_notes_schema.json
.github/workflows/: checks.yaml  generate_and_release_sbom.yaml  publish.yaml
docs/: 00_Overview.md  00_overview.md  01_Setup.md  01_setup.md  02_Prompting.md  02_using_agents.md  03_Using-Models-and-BYOM.md  03_prompting.md  04_Caching.md  04_using_models.md  05_Tools.md  05_bring_your_own_model_provider.md  06_Observability-Telemetry-Tracing.md  06_caching.md  07_tools.md  08_reporting.md  09_observability_telemetry_tracing.md  10_extracting_data.md  11_callbacks.md  11_file_support.md  API.md  architecture.md  autonomous-browser.md  caching.md  chat-document-support.md  chat.md  extracting-data.md  file-support.md  mcp.md  migrations.md  prompting.md  tracing.md  truncation-strategies.md  using-models.md  visual_validation.md
examples/: README.md  basic_caching_example.py  caching_demo.py  custom_api.py  custom_speakers_demo.py  model_providers.py  simple_act.py  visual_validation_demo.py  visual_validation_example.py
src/askui/: __init__.py  agent.py  agent_base.py  agent_settings.py  android_agent.py  chat.py  cli.py  click_recorder.py  computer_agent.py  container.py  custom_agent.py  data_extractor.py  exceptions.py  logger.py  multi_device_agent.py  reporting.py  retry.py  settings.py  utils.py  web_agent.py  web_testing_agent.py
src/askui/browser/: __main__.py  workflow_manager.py
src/askui/callbacks/: __init__.py  conversation_callback.py  conversation_statistics_callback.py  max_steps_callback.py  usage_tracking_callback.py
src/askui/chat/: __main__.py  click_recorder.py
src/askui/locators/: __init__.py  image_utils.py  locators.py  relatable.py  serializers.py
src/askui/mcp/: __main__.py
src/askui/model_providers/: __init__.py  anthropic_image_qa_provider.py  anthropic_vlm_provider.py  askui_detection_provider.py  askui_image_qa_provider.py  askui_vlm_provider.py  detection_provider.py  google_image_qa_provider.py  image_qa_provider.py  ollama_image_qa_provider.py  ollama_vlm_provider.py  openai_compatible_provider.py  openai_compatible_vlm_provider.py  openai_image_qa_provider.py  openai_vlm_provider.py  vlm_provider.py
src/askui/model_store/: __init__.py  defaults.py
src/askui/models/: __init__.py  custom_models.py  defaults.py  exceptions.py  fallback_model.py  generic_act_model.py  locators.py  model_router.py  models.py  router.py  types.py  utils.py
src/askui/prompts/: act_prompts.py  caching.py  locate_prompts.py  system.py  truncation.py
src/askui/reporting/: report.py
src/askui/speaker/: __init__.py  agent_speaker.py  askui_agent.py  cache_executor.py  conversation.py  speaker.py
src/askui/telemetry/: __init__.py  analytics.py  anonymous_id.py  context.py  otel.py  pkg_version.py  processors.py  telemetry.py  user_identification.py  utils.py
src/askui/tools/: __init__.py  active_display_tool.py  agent_os.py  android_agent_os.py  askui_controller.py  caching_tools.py  computer.py  computer_agent_os_facade.py  computer_scaled_agent_os.py  cursor_position_tool.py  exception_tool.py  get_tool.py  list_display_tool.py  locate_tool.py  playwright_agent_os.py  pynput_agent_os.py  retrieve_active_display_tool.py  screen_switch_tool.py  set_display_tool.py  switch_speaker_tool.py  toolbox.py  utils.py
src/askui/utils/: __init__.py  annotation_writer.py  api_utils.py  asyncio_utils.py  cache_execution_manager.py  cache_manager.py  cache_migration.py  cache_parameter_handler.py  cache_validator.py  cache_writer.py  excel_utils.py  file_utils.py  http_utils.py  id_utils.py  image_utils.py  io_utils.py  markdown_utils.py  model_pricing.py  not_given.py  pdf_utils.py  placeholder_handler.py  placeholder_identifier.py  source_utils.py  trajectory_executor.py  visual_validation.py
src/chat/api/: app.py  settings.py
src/vision_agent/: agent.py  logging.py
src/vision_agent/brains/: claude.py  claude_agent.py
src/vision_agent/tools/: askui_controller.py  utils.py
tests/: conftest.py  test_agent.py  test_version.py
tests/e2e/: test_telemetry.py
tests/e2e/agent/: conftest.py  test_act.py  test_act_caching.py  test_agent_offset.py  test_get.py  test_locate.py  test_locate_with_different_models.py  test_locate_with_relations.py  test_mcp.py  test_mcp_integration.py  test_model_composition.py  test_wait.py
tests/fixtures/docs/: dummy.docx
tests/fixtures/excel/: dummy.xlsx
tests/integration/: test_custom_models.py
tests/integration/agent/: conftest.py  test_computer_agent.py  test_retry.py
tests/integration/models/: test_holo1.py
tests/integration/utils/: test_pdf_utils.py
tests/telemetry/: test_telemetry.py  test_utils.py
tests/tools/askui/: test_askui_controller.py
tests/unit/: conftest.py  test_execution_status_transitions.py  test_request_document_translator.py  test_validate_call.py  test_version.py
tests/unit/locators/: test_image_utils.py  test_locators.py  test_serializers.py
tests/unit/model_providers/: test_model_pricing.py  test_ollama_image_qa_provider.py  test_ollama_vlm_provider.py  test_openai_compatible_vlm_provider.py  test_openai_image_qa_provider.py  test_openai_vlm_provider.py
tests/unit/models/: test_computer_agent_filter.py  test_messages_api_field_stripping.py  test_model_router.py  test_models.py  test_router.py  test_token_counting_visual_validation.py  test_truncation_strategies.py
tests/unit/telemetry/: test_anonymous_id.py  test_device_id.py  test_telemetry.py  test_utils.py
tests/unit/tools/: test_caching_tools.py  test_switch_speaker_tool.py
tests/unit/utils/: test_cache_manager.py  test_cache_migration.py  test_cache_parameter_handler.py  test_cache_validator.py  test_not_given.py  (+6 more)
tests/utils/: generate_ai_elements.py
(+431 files in other folders)
