[project]
name = "askui"
description = "Automate computer tasks in Python"
authors = [
    {name = "askui GmbH", email = "info@askui.com"},
]
dependencies = [
    "grpcio>=1.67.0",
    "grpcio-tools>=1.67.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "anthropic>=0.49.0",
    "rich>=13.9.4",
    "pyperclip>=1.9.0",
    "gradio-client>=1.4.3",
    "requests>=2.32.3",
    "Jinja2>=3.1.4",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.61.1",
    "segment-analytics-python>=2.3.4",
    "py-machineid>=0.7.0",
    "httpx>=0.28.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/askui/__init__.py"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest -n auto"
"test:e2e" = "pytest -n auto tests/e2e"
"test:integration" = "pytest -n auto tests/integration"
"test:unit" = "pytest -n auto tests/unit"
"test:cov:view" = "python -m http.server --directory htmlcov"
sort = "isort ."
format = "black ."
lint = "ruff check ."
typecheck = "mypy"
"typecheck:all" = "mypy src tests"
checks = {composite = ["sort . -c", "format . --check", "typecheck"]}
fix = {composite = ["sort", "format", "lint", "typecheck"]}
chat = "streamlit run src/askui/chat/__main__.py"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "isort>=6.0.0",
    "black>=25.1.0",
    "ruff>=0.9.5",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0.20240311",
    "types-python-dateutil>=2.8.19.20240106",
    "types-Pillow>=10.2.0.20240311",
    "types-protobuf>=4.24.0.20240311",
    "grpc-stubs>=1.53.0.3",
    "types-pyperclip>=1.8.2.20240311",
]
chat = [
    "streamlit>=1.42.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/askui --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
plugins = ["pydantic.mypy"]
exclude = [
    "src/askui/chat/.*",
    "src/askui/models/ui_tars_ep/ui_tars_api.py",
    "src/askui/tools/anthropic/computer.py",
    "src/askui/tools/askui/askui_ui_controller_grpc/.*",
    "src/askui/tools/askui/askui_workspaces/.*",
]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
